--- a/raumidiscord.core.client/index.html
+++ b/raumidiscord.core.client/index.html
@@ -7,7 +7,11 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
+      <div>
+          <a href="../tools/index.html"> tools(制作中)</a>
+      </div>
   </body>
 </html>
