--- a/raumidiscord.core.client/index.html
+++ b/raumidiscord.core.client/index.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
+      <div>
+          <a href="/src/tools/index.html"> tools(制作中)</a>
+      </div>
+  </body>
 </html>
