web の修正(ページの有効化)

--- a/raumidiscord.core.client/index.html
+++ b/raumidiscord.core.client/index.html
@@ -9,9 +9,11 @@
   <body>
 
       <div id="root"></div>
+      <br />
       <script type="module" src="/src/main.tsx"></script>
+
       <div>
-          <a href="/src/tools/index.html"> tools(制作中)</a>
+          <a href="./tools/index.html"> tools(制作中)</a>
       </div>
   </body>
 </html>
