--- a/raumidiscord.core.client/tools/index.html
+++ b/raumidiscord.core.client/tools/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400&display=swap"
       rel="stylesheet"
     />
-    <title>Tokyo Free White React Typescript Admin Dashboard</title>
+    <title>Admin Dashboard</title>
     <meta
       name="description"
       content=""
