--- a/raumidiscord.core.client/tools/index.html
+++ b/raumidiscord.core.client/tools/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#1975ff" />
+    <meta name="theme-color" content="#7bb3ee" />
     <link rel="manifest" href="./manifest.json" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400&display=swap"
