--- a/raumidiscord.core.client/tools/index.html
+++ b/raumidiscord.core.client/tools/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <link rel="shortcut icon" href="./favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#7bb3ee" />
-    <link rel="manifest" href="./manifest.json" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400&display=swap"
       rel="stylesheet"
@@ -25,10 +24,11 @@
   </head>
 
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <div>
-      ...
-    </div>
+      <noscript>You need to enable JavaScript to run this app.</noscript>
+      <div id="root"></div>
+      <script type="module" src="/tools/index.tsx"></script>
+      <div>
+          ...
+      </div>
   </body>
 </html>
