add yohotool gui

--- a/raumidiscord.core.client/tools/index.html
+++ b/raumidiscord.core.client/tools/index.html
@@ -23,7 +23,7 @@
     />
   </head>
 
-  <body>
+  <body bgcolor="#FFF">
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root"></div>
       <script type="module" src="/tools/index.tsx"></script>
