バージョンアップと日本語化の改善
- `ComponentInteractionService.cs`のバージョンを0.1.3.10に更新。
- UIテキストを英語から日本語に変更し、ユーザー体験を向上。
- 不要なインポートの削除と新しいアイコンの追加。
- 各コンポーネントのタイトルやラベルを日本語に更新。
- `Copyright`のテキストを`Raumi`に変更。
- `index.html`のツールリンクを`ロード中`に変更。リンクはダッシュボード内へ配置

--- a/raumidiscord.core.client/index.html
+++ b/raumidiscord.core.client/index.html
@@ -14,7 +14,7 @@
   <br />
   <script type="module" src="/dashboard/index.tsx"></script>
   <div>
-    <a href="./tools/index.html"> tools(制作中)</a>
+    <p>ロード中</p>
   </div>
 </body>
 
