アバターソース変更と認証フォームの実装
SideMenu.tsx と SideMenuMobile.tsx でアバターの画像ソースをローカルから Discord の CDN に変更しました。
raumidiscord.core.client.esproj に新しいフォルダーを追加し、README.md にサインインおよびサインアップテンプレートの使用方法を追加しました。
SignIn.tsx と SignUp.tsx では、それぞれサインインフォームとサインアップフォームを実装し、バリデーション機能を追加しました。
ForgotPassword.tsx では、パスワードリセット用のダイアログを実装しました。
CustomIcons.tsx に新しいアイコンコンポーネントを追加し、index.html と index.tsx を更新してエントリーポイントを設定しました。

--- a/raumidiscord.core.client/tools/index.html
+++ b/raumidiscord.core.client/tools/index.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#7bb3ee" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400&display=swap"
-      rel="stylesheet"
-    />
-    <title>Admin Dashboard</title>
-    <meta
-      name="description"
-      content=""
-    />
-    <meta
-      name="keywords"
-      content=""
-    />
-  </head>
 
-  <body bgcolor="#FFF">
-      <noscript>You need to enable JavaScript to run this app.</noscript>
-      <div id="root"></div>
-      <script type="module" src="/tools/index.tsx"></script>
-      <div>
-          ...
-      </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="shortcut icon" href="./favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" content="#7bb3ee" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400&display=swap" rel="stylesheet" />
+  <title>Admin Dashboard</title>
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+</head>
+
+<body bgcolor="#FFF">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script type="module" src="./index.tsx"></script>
+  <div>
+    ...
+  </div>
+</body>
+
 </html>
